--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <title>Plantilla para modificar de HTML y CSS</title>
         <!--Declaración de estilos en CSS-->
         <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap">
         <!--Declaración de favicon (Icono de Favoritos)-->
         <link  rel="icon"   href="media/logo_B.png" type="image/png" />
         <!--Declaración de información de la página-->
